Moved the navigation item down in mobile and adjusted the height so it fits, also added margin to the bottom so Inquire looks centered in the remaining space, Looked into an issue with the menu not being visible on small screens, Fixed it so the menu when open on small screens, is the full height and scrollable, Fixed the problem with the last few menu items not showing in mobile landscape, Fixed the padding on the menu for tablet so the aqi and inquire buttons fit and are spaced appropriately

--- a/assets/src/sass/fe/includes/_widget.scss
+++ b/assets/src/sass/fe/includes/_widget.scss
@@ -12,9 +12,10 @@
     }
 
     &--bubble {
-        height: 50px;
+        height: 94px;
+        margin-bottom: 10px;
         position: relative;
-        top: -15px;
+        top: 0;
         cursor: pointer;
 
         &:hover {
@@ -78,4 +79,62 @@
         }
     }
 
+}
+
+@media (max-width: 700px)
+    and (max-height: 624px) {
+    .header-block .responsive-nav .header-top {
+        margin-bottom: 100px !important;
+    }
+}
+
+@media (max-width: 850px) {
+    .block.header-right.responsive-nav.open {
+        height: 100vh !important;
+        overflow-y: scroll;
+    }
+}
+
+/* Desktop bigger than 851px */
+@media only screen 
+    and (min-width : 851px ) {
+    .d-aqinfo {
+        &--bubble {
+            top: -15px;
+            height: 50px;
+            margin-bottom: 0;
+        }
+    }
+}
+
+/* Up to 1100 width screen */
+@media (min-width: 851px)
+    and (max-width: 1114px) {
+    .header-block .header-right .header-bottom {
+        padding-left: 10px !important;
+        padding-right: 10px !important;
+
+        li {
+            padding-right: 5px !important;
+        }
+    }
+}
+
+/* Tablet Landscape */
+@media only screen 
+    and (min-device-width : 768px ) 
+    and (max-device-width : 1024px )
+    and (orientation: landscape ) {
+    .header-block .header-right .header-bottom {
+        padding-right: 20px !important;
+    }
+}
+
+/* iPad Pro Portrait*/
+@media only screen  
+    and (min-device-width : 1024px )
+    and (orientation: portrait ) {
+    .header-block .header-right .header-bottom {
+        padding-right: 20px !important;
+    }
 }
